--- a/carInfo.html
+++ b/carInfo.html
@@ -110,14 +110,13 @@
     <!-- Car Info -->
     <section class="carInfo" id="carInfo">
         <div class="content">
-
-            <h1 class="carTitle" id="carTitle" style="font-family: Unbounded, monospace;"> White Ford F-150 XL </h1>
-            <h1 class="carPrice" id="carPrice" style="font-family: Unbounded, monospace;"> $30,000 </h1>
-            <h3 class="carTitle2" id="carMileage" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> 38,908 Miles
-            </h3>
+            <div class="row">
+                <h1 class="carTitle" id="carTitle" style="font-family: Unbounded, monospace;"> White Ford F-150 XL </h1>
+                <h1 class="carPrice" id="carPrice" style="font-family: Unbounded, monospace;"> $30,000 </h1>
+                <h3 class="carTitle2" id="carMileage" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> 38,908 Miles</h3>
+            </div>
 
             <img id="carImage" src="/image/cars/1.png" style="width: 80%;">
-
         </div>
 
         <div class="specs">
