--- a/explore.html
+++ b/explore.html
@@ -119,6 +119,8 @@
             <h2>Filters</h2>
         </div>
 
+<button class="btn" onclick="clearSelection()"> Selection</button>
+
         <nav class="slideOne">
 
             <label for="c"><span id="colorTab">Color</span></label>
@@ -190,7 +192,7 @@
 
         </nav>
 
-        <button class="btn" onclick="clearSelection()">Clear Selection</button>
+        
 
     </div>
 
