--- a/explore.html
+++ b/explore.html
@@ -119,7 +119,7 @@
             <h2>Filters</h2>
         </div>
 
-<button class="btn" onclick="clearSelection()"> Selection</button>
+<button class="btn" onclick="clearSelection()">Clear Selection</button>
 
         <nav class="slideOne">
 
