--- a/explore.html
+++ b/explore.html
@@ -535,7 +535,7 @@
         import data from '../database.json' assert {type: 'json'};
         var selections = ["", "", "", "", ""]; // color, type, transmission, drivetrain, fuel
         var colors = ["White", "Silver", "Red", "Gray", "Blue", "Green", "Black"];
-        var types = ["Pickup", "Suv", "Coupe", "Convertible", "Hatchback"];
+        var types = ["Pickup", "SUV", "Coupe", "Convertible", "Hatchback"];
         var transmissions = ["Automatic", "Manual", "Single-speed"];
         var drivetrains = ["RWD", "AWD", "4WD", "FWD"];
         var fuels = ["Electric", "Gas"];
