carinfo iphone fix

--- a/carInfo.html
+++ b/carInfo.html
@@ -18,7 +18,7 @@
     <title>Car Info</title>
 </head>
 
-<body onload="setInfo()">
+<body>
 
     <!-- Navbar -->
     <header class="header">
@@ -113,10 +113,11 @@
             <div class="row">
                 <h1 class="carTitle" id="carTitle" style="font-family: Unbounded, monospace;"> White Ford F-150 XL </h1>
                 <h1 class="carPrice" id="carPrice" style="font-family: Unbounded, monospace;"> $30,000 </h1>
-                <h3 class="carTitle2" id="carMileage" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> 38,908 Miles</h3>
+                <h3 class="carTitle2" id="carMileage" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> 38,908
+                    Miles</h3>
             </div>
 
-            <img id="carImage" src="/image/cars/1.png" style="width: 80%;">
+            <img id="carImage" src="" style="width: 80%;">
         </div>
 
         <div class="specs">
@@ -136,25 +137,38 @@
 
             <h1 class="specsHeader" style="font-family: Unbounded, monospace;">Specifications</h1>
             <div class="tb">
-                
-                <h3 class="Manufacturer" id="manufacturer" style=" font-family: 'Plus Jakarta Sans', sans-serif;">Manufacturer: xxxxxx</h3>
+
+                <h3 class="Manufacturer" id="manufacturer" style=" font-family: 'Plus Jakarta Sans', sans-serif;">
+                    Manufacturer: xxxxxx</h3>
                 <h3 class="Model" id="model" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Model: xxxxxx</h3>
                 <h3 class="Year" id="year" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Year: xxxxxx</h3>
                 <h3 class="Trim" id="trim" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Trim: xxxxxx</h3>
                 <h3 class="Color" id="color" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Color: xxxxxx</h3>
                 <h3 class="Size" id="size" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Size: xxxxxx</h3>
-                <h3 class="# of Seats" id="numSeats" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> # ofSeats: xxxxxx</h3>
-                <h3 class="Category" id="category" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Category: xxxxxx</h3>
-                <h3 class="Engine" id="engine" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Engine: xxxxxx</h3>
-                <h3 class="fuel Capacity" id="fuelCapacity" style=" font-family: 'Plus Jakarta Sans', sans-serif;">Fuel Capacity: xxxxxx</h3>
-                <h3 class="Mileage" id="mileage" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Mileage: xxxxxx</h3>
-                <h3 class="Drive Train" id="driveTrain" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> DriveTrain: xxxxxx</h3>
-                <h3 class="Transmission" id="transmission" style=" font-family: 'Plus Jakarta Sans', sans-serif;">Transmission: xxxxxx</h3>
-                <h3 class="Weight" id="weight" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Weight: xxxxxx</h3>
-                <h3 class="Overall Height" id="height" style=" font-family: 'Plus Jakarta Sans', sans-serif;">Overall Height: xxxxxx</h3>
-                <h3 class="Overall Length" id="length" style=" font-family: 'Plus Jakarta Sans', sans-serif;">Overall Length: xxxxxx</h3>
-                <h3 class="Overall Width" id="width" style=" font-family: 'Plus Jakarta Sans', sans-serif;">Overall Width: xxxxxx</h3>
-                <h3 class="Features" id="features" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Features:xxxxxx</h3>
+                <h3 class="# of Seats" id="numSeats" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> # ofSeats:
+                    xxxxxx</h3>
+                <h3 class="Category" id="category" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Category:
+                    xxxxxx</h3>
+                <h3 class="Engine" id="engine" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Engine: xxxxxx
+                </h3>
+                <h3 class="fuel Capacity" id="fuelCapacity" style=" font-family: 'Plus Jakarta Sans', sans-serif;">Fuel
+                    Capacity: xxxxxx</h3>
+                <h3 class="Mileage" id="mileage" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Mileage: xxxxxx
+                </h3>
+                <h3 class="Drive Train" id="driveTrain" style=" font-family: 'Plus Jakarta Sans', sans-serif;">
+                    DriveTrain: xxxxxx</h3>
+                <h3 class="Transmission" id="transmission" style=" font-family: 'Plus Jakarta Sans', sans-serif;">
+                    Transmission: xxxxxx</h3>
+                <h3 class="Weight" id="weight" style=" font-family: 'Plus Jakarta Sans', sans-serif;"> Weight: xxxxxx
+                </h3>
+                <h3 class="Overall Height" id="height" style=" font-family: 'Plus Jakarta Sans', sans-serif;">Overall
+                    Height: xxxxxx</h3>
+                <h3 class="Overall Length" id="length" style=" font-family: 'Plus Jakarta Sans', sans-serif;">Overall
+                    Length: xxxxxx</h3>
+                <h3 class="Overall Width" id="width" style=" font-family: 'Plus Jakarta Sans', sans-serif;">Overall
+                    Width: xxxxxx</h3>
+                <h3 class="Features" id="features" style=" font-family: 'Plus Jakarta Sans', sans-serif;">
+                    Features:xxxxxx</h3>
 
             </div>
 
@@ -213,6 +227,10 @@
             document.getElementById("contactsb").style.width = "0";
 
         }
+
+        window.onload = (function () {
+            setInfo();
+        });
     </script>
 
     <!-- Content Script -->
