--- a/explore.html
+++ b/explore.html
@@ -119,7 +119,7 @@
             <h2>Filters</h2>
         </div>
 
-<button class="btn" onclick="clearSelection()">Clear Selection</button>
+<button class="btn" onclick="clearSel()">Clear Selection</button>
 
         <nav class="slideOne">
 
@@ -127,13 +127,13 @@
             <input type="checkbox" id="c">
 
             <ul class="slide color">
-                <li onclick="setColor(0)"><a href="#">White</li>
-                <li onclick="setColor(1)"><a href="#">Silver</a></li>
-                <li onclick="setColor(2)"><a href="#">Red</a></li>
-                <li onclick="setColor(3)"><a href="#">Gray</a></li>
-                <li onclick="setColor(4)"><a href="#">Blue</a></li>
-                <li onclick="setColor(5)"><a href="#">Green</a></li>
-                <li onclick="setColor(6)"><a href="#">Black</a></li>
+                <li onclick="color(0)"><a href="#">White</li>
+                <li onclick="color(1)"><a href="#">Silver</a></li>
+                <li onclick="color(2)"><a href="#">Red</a></li>
+                <li onclick="color(3)"><a href="#">Gray</a></li>
+                <li onclick="color(4)"><a href="#">Blue</a></li>
+                <li onclick="color(5)"><a href="#">Green</a></li>
+                <li onclick="color(6)"><a href="#">Black</a></li>
             </ul>
 
         </nav>
@@ -144,11 +144,11 @@
             <input type="checkbox" id="t">
 
             <ul class="slide type">
-                <li onclick="setType(0)"><a href="#">Pickup</a></li>
-                <li onclick="setType(1)"><a href="#">SUV</a></li>
-                <li onclick="setType(2)"><a href="#">Coupe</a></li>
-                <li onclick="setType(3)"><a href="#">Convertible</a></li>
-                <li onclick="setType(4)"><a href="#">Hatchback</a></li>
+                <li onclick="stype(0)"><a href="#">Pickup</a></li>
+                <li onclick="stype(1)"><a href="#">SUV</a></li>
+                <li onclick="stype(2)"><a href="#">Coupe</a></li>
+                <li onclick="stype(3)"><a href="#">Convertible</a></li>
+                <li onclick="stype(4)"><a href="#">Hatchback</a></li>
             </ul>
 
         </nav>
@@ -159,9 +159,9 @@
             <input type="checkbox" id="tr">
 
             <ul class="slide type">
-                <li onclick="setTransmission(0)"><a href="#">Automatic</a></li>
-                <li onclick="setTransmission(1)"><a href="#">Manual</a></li>
-                <li onclick="setTransmission(2)"><a href="#">Single-Speed</a></li>
+                <li onclick="transmission(0)"><a href="#">Automatic</a></li>
+                <li onclick="transmission(1)"><a href="#">Manual</a></li>
+                <li onclick="transmission(2)"><a href="#">Single-Speed</a></li>
             </ul>
 
         </nav>
@@ -172,10 +172,10 @@
             <input type="checkbox" id="d">
 
             <ul class="slide type">
-                <li onclick="setDrivetrain(0)"><a href="#">RWD</a></li>
-                <li onclick="setDrivetrain(1)"><a href="#">AWD</a></li>
-                <li onclick="setDrivetrain(2)"><a href="#">4WD</a></li>
-                <li onclick="setDrivetrain(3)"><a href="#">FWD</a></li>
+                <li onclick="drivetrain(0)"><a href="#">RWD</a></li>
+                <li onclick="drivetrain(1)"><a href="#">AWD</a></li>
+                <li onclick="drivetrain(2)"><a href="#">4WD</a></li>
+                <li onclick="drivetrain(3)"><a href="#">FWD</a></li>
             </ul>
 
         </nav>
@@ -186,8 +186,8 @@
             <input type="checkbox" id="f">
 
             <ul class="slide type">
-                <li onclick="setFuel(0)"><a href="#">Electric</a></li>
-                <li onclick="setFuel(1)"><a href="#">Gasoline</a></li>
+                <li onclick="fuel(0)"><a href="#">Electric</a></li>
+                <li onclick="fuel(1)"><a href="#">Gasoline</a></li>
             </ul>
 
         </nav>
@@ -527,6 +527,30 @@
 
             var url = "/carinfo.html?" + params.toString();
             location.href = url;
+        }
+
+        function color(input) {
+            setColor(input);
+        }
+
+        function stype(input) {
+            setType(input);
+        }
+
+        function transmission(input) {
+            setTransmission(input);
+        }
+
+        function drivetrain(input) {
+            setDrivetrain(input);
+        }
+
+        function fuel(input) {
+            setFuel(input);
+        }
+
+        function clearSel() {
+            clearSelection();
         }
     </script>
 
